--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,7 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.VUE3 }} # VUE_ADMIN_TEMPLATE 是我的 secret 名称，需要替换成你的
           BRANCH: master
           FOLDER: dist
-          REPOSITORY_NAME: wh-mm.github.io # 这是我的 github page 仓库
+          REPOSITORY_NAME: https://wh-mm.github.io/vue3-Tododemo/ # 这是我的 github page 仓库
           TARGET_FOLDER: vue3-todo # 打包的文件将放到静态服务器 github-actions-demo 目录下
 
             # 上面有一个 ACCESS_TOKEN 变量需要自己配置。
