--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,29 +1,36 @@
-name: Build and Deploy
-on: # 监听 master 分支上的 push 事件
+# This is a basic workflow to help you get started with Actions
+
+name: CI
+
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches:
-      - master
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest # 构建环境使用 ubuntu
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.1
-        with:
-          persist-credentials: false
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-      - name: Install and Build # 下载依赖 打包项目
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
         run: |
-          npm install
-          npm run build
-
-      - name: Deploy # 将打包内容发布到 github page
-        uses: JamesIves/github-pages-deploy-action@3.5.9 # 使用别人写好的 actions
-        with:  # 自定义环境变量
-          ACCESS_TOKEN: ${{ secrets.VUE3 }} # VUE_ADMIN_TEMPLATE 是我的 secret 名称，需要替换成你的
-          BRANCH: master
-          FOLDER: dist
-          REPOSITORY_NAME: https://wh-mm.github.io/vue3-Tododemo/ # 这是我的 github page 仓库
-          TARGET_FOLDER: vue3-todo # 打包的文件将放到静态服务器 github-actions-demo 目录下
-
-            # 上面有一个 ACCESS_TOKEN 变量需要自己配置。
+          echo Add other actions to build,
+          echo test, and deploy your project.
